--- a/TODO.txt
+++ b/TODO.txt
@@ -25,8 +25,8 @@ Done list
 Bug List
 
 - tile loading is still tempremental
-- Largest zoom level has problems
-- points are not showing up consistently for some reason
-- Maybe we need to load the next biggest zoom level
-- Not loading correct tile on zoom change
+  - this has gotten better, still not very good
+- clustering has issues
+  - as the zoom level increases, it gets worse
+  - points are not showing up consistently for some reason
 - Clusters are still being weird
